test/ui/tests/type-mismatch.stderr
error[E032]: type mismatch
  --> ${TEST_FOLDER}/type-mismatch.lushui:15:4
   |
15 | a: X = Type
   |    - expected due to this
   |
  --> ${TEST_FOLDER}/type-mismatch.lushui:15:8
   |
15 | a: X = Type
   |        ^^^^ has the wrong type
   |
  note: expected type ‘topmost.X’
         but got type ‘Type’

error[E032]: type mismatch
  --> ${TEST_FOLDER}/type-mismatch.lushui:16:4
   |
16 | b: Type = X.x
   |    ---- expected due to this
   |
  --> ${TEST_FOLDER}/type-mismatch.lushui:16:11
   |
16 | b: Type = X.x
   |           ^^^ has the wrong type
   |
  note: expected type ‘Type’
         but got type ‘topmost.X’

error[E032]: type mismatch
  --> ${TEST_FOLDER}/type-mismatch.lushui:20:4
   |
20 | x: false = false
   |    ^^^^^ has the wrong type
   |
  note: expected type ‘Type’
         but got type ‘extern.core.bool.Bool’

error[E032]: type mismatch
  --> ${TEST_FOLDER}/type-mismatch.lushui:22:10
   |
22 | take (b: Bool): Bool = true
   |          ---- expected due to this
   |
  --> ${TEST_FOLDER}/type-mismatch.lushui:24:16
   |
24 | t: Bool = take 44
   |                ^^ has the wrong type
   |
  note: expected type ‘extern.core.bool.Bool’
         but got type ‘extern.core.nat.Nat’

error: aborting due to 4 previous errors

